crates/query-engine/tests/snapshots/tests__it_aggregate_count_albums.snap
---
source: crates/query-engine/tests/tests.rs
expression: result
---
SELECT
  JSON_QUERY([rows].[json], '$.json') AS [rows],
  JSON_QUERY(JSON_VALUE([aggregates].[json], '$.json'), '$') AS [aggregates]
FROM
  (
    SELECT
      *
    FROM
      (
        SELECT
          [Album].[Title] AS [Title]
        FROM
          [public].[Album] AS [Album]
        ORDER BY
          [Album].[AlbumId] ASC OFFSET 3 ROWS FETCH NEXT 5 ROWS ONLY FOR JSON PATH,
          INCLUDE_NULL_VALUES
      ) AS [universe]([json]) FOR JSON PATH,
      INCLUDE_NULL_VALUES,
      WITHOUT_ARRAY_WRAPPER
  ) AS [rows]([json])
  CROSS JOIN (
    SELECT
      *
    FROM
      (
        SELECT
          COUNT(*) AS [how_many_albums]
        FROM
          [public].[Album] AS [Album] FOR JSON PATH,
          INCLUDE_NULL_VALUES,
          WITHOUT_ARRAY_WRAPPER
      ) AS [aggregates]([json]) FOR JSON PATH,
      INCLUDE_NULL_VALUES,
      WITHOUT_ARRAY_WRAPPER
  ) AS [aggregates]([json]) FOR JSON PATH,
  INCLUDE_NULL_VALUES,
  WITHOUT_ARRAY_WRAPPER

[]
