crates/query-engine/tests/snapshots/tests__it_select_where_related_exists.snap
---
source: crates/query-engine/tests/tests.rs
expression: result
---
SELECT
  [rows].[row_json] AS [rows]
FROM
  (
    SELECT
      [artist].[Name] AS [title],
      [albums].[albums] AS [albums]
    FROM
      [public].[Artist] AS [artist]
      OUTER APPLY (
        SELECT
          [rows].[json] AS [rows]
        FROM
          (
            SELECT
              [album].[Title] AS [title]
            FROM
              [public].[Album] AS [album]
            WHERE
              (
                (1 = 1)
                AND ([artist].[ArtistId] = [album].[ArtistId])
              ) FOR JSON PATH,
              INCLUDE_NULL_VALUES
          ) AS [rows]([json]) FOR JSON PATH,
          INCLUDE_NULL_VALUES,
          WITHOUT_ARRAY_WRAPPER
      ) AS [albums]([json])
    WHERE
      EXISTS (
        SELECT
        FROM
          [public].[Album] AS [album]
        WHERE
          (
            ([album].[Title] LIKE @P1)
            AND ([artist].[ArtistId] = [album].[ArtistId])
          ) FOR JSON PATH,
          INCLUDE_NULL_VALUES
      ) FOR JSON PATH,
      INCLUDE_NULL_VALUES
  ) AS [rows]([row_json]) FOR JSON PATH,
  INCLUDE_NULL_VALUES,
  WITHOUT_ARRAY_WRAPPER

[(1, String("Supernatural"))]
