crates/query-engine/tests/snapshots/tests__nested_aggregates.snap
---
source: crates/query-engine/tests/tests.rs
expression: result
---
SELECT
  [rows].[row_json] AS [rows]
FROM
  (
    SELECT
      [Artist].[Name] AS [Name],
      [Albums].[Albums] AS [Albums]
    FROM
      [public].[Artist] AS [Artist]
      OUTER APPLY (
        SELECT
          JSON_QUERY([rows].[json], '$.json') AS [rows],
          JSON_QUERY(JSON_VALUE([aggregates].[json], '$.json'), '$') AS [aggregates]
        FROM
          (
            SELECT
              *
            FROM
              (
                SELECT
                  [Album].[Title] AS [Title]
                FROM
                  [public].[Album] AS [Album]
                WHERE
                  (
                    (1 = 1)
                    AND ([Artist].[ArtistId] = [Album].[ArtistId])
                  ) FOR JSON PATH,
                  INCLUDE_NULL_VALUES
              ) AS [Albums]([json]) FOR JSON PATH,
              INCLUDE_NULL_VALUES,
              WITHOUT_ARRAY_WRAPPER
          ) AS [rows]([json])
          CROSS JOIN (
            SELECT
              *
            FROM
              (
                SELECT
                  COUNT(*) AS [how_many_albums]
                FROM
                  [public].[Album] AS [Album]
                WHERE
                  (
                    (1 = 1)
                    AND ([Artist].[ArtistId] = [Album].[ArtistId])
                  ) FOR JSON PATH,
                  INCLUDE_NULL_VALUES,
                  WITHOUT_ARRAY_WRAPPER
              ) AS [aggregates]([json]) FOR JSON PATH,
              INCLUDE_NULL_VALUES,
              WITHOUT_ARRAY_WRAPPER
          ) AS [aggregates]([json]) FOR JSON PATH,
          INCLUDE_NULL_VALUES,
          WITHOUT_ARRAY_WRAPPER
      ) AS [Albums]([json])
    ORDER BY
      [Artist].[ArtistId] ASC OFFSET 1 ROWS FETCH NEXT 5 ROWS ONLY FOR JSON PATH,
      INCLUDE_NULL_VALUES
  ) AS [rows]([row_json]) FOR JSON PATH,
  INCLUDE_NULL_VALUES,
  WITHOUT_ARRAY_WRAPPER

[]
