crates/query-engine/tests/snapshots/tests__nested_array_relationships.snap
---
source: crates/query-engine/tests/tests.rs
expression: result
---
SELECT
  [rows].[row_json] AS [rows]
FROM
  (
    SELECT
      JSON_QUERY([Albums].[json], '$') AS [Albums]
    FROM
      [public].[Artist] AS [Artist]
      OUTER APPLY (
        SELECT
          [rows].[row_json] AS [rows]
        FROM
          (
            SELECT
              JSON_QUERY([Tracks].[json], '$') AS [Tracks]
            FROM
              [public].[Album] AS [Album]
              OUTER APPLY (
                SELECT
                  [rows].[row_json] AS [rows]
                FROM
                  (
                    SELECT
                      [Track].[Name] AS [name]
                    FROM
                      [public].[Track] AS [Track]
                    WHERE
                      (
                        (1 = 1)
                        AND ([Album].[AlbumId] = [Track].[AlbumId])
                      ) FOR JSON PATH,
                      INCLUDE_NULL_VALUES
                  ) AS [rows]([row_json]) FOR JSON PATH,
                  INCLUDE_NULL_VALUES,
                  WITHOUT_ARRAY_WRAPPER
              ) AS [Tracks]([json])
            WHERE
              (
                (1 = 1)
                AND ([Artist].[ArtistId] = [Album].[ArtistId])
              ) FOR JSON PATH,
              INCLUDE_NULL_VALUES
          ) AS [rows]([row_json]) FOR JSON PATH,
          INCLUDE_NULL_VALUES,
          WITHOUT_ARRAY_WRAPPER
      ) AS [Albums]([json]) FOR JSON PATH,
      INCLUDE_NULL_VALUES
  ) AS [rows]([row_json]) FOR JSON PATH,
  INCLUDE_NULL_VALUES,
  WITHOUT_ARRAY_WRAPPER

[]
