crates/query-engine/tests/snapshots/tests__sorting_by_nested_relationship_column.snap
---
source: crates/query-engine/tests/tests.rs
expression: result
---
SELECT
  [rows].[row_json] AS [rows]
FROM
  (
    SELECT
      [Track].[Name] AS [Name]
    FROM
      [public].[Track] AS [Track]
      OUTER APPLY (
        SELECT
          [Artist].[Name] AS [Name]
        FROM
          (
            SELECT
              [Album].[ArtistId] AS [ArtistId]
            FROM
              [Album] AS [Album]
            WHERE
              (
                (1 = 1)
                AND ([Track].[AlbumId] = [Album].[AlbumId])
              ) FOR JSON PATH,
              INCLUDE_NULL_VALUES
          ) AS [Album]
          OUTER APPLY (
            SELECT
              [Artist].[Name] AS [Name]
            FROM
              [Artist] AS [Artist]
            WHERE
              (
                (1 = 1)
                AND ([Album].[ArtistId] = [Artist].[ArtistId])
              ) FOR JSON PATH,
              INCLUDE_NULL_VALUES
          ) AS [Artist] FOR JSON PATH,
          INCLUDE_NULL_VALUES
      ) AS [%ORDER_0_FOR_Track]([json])
    ORDER BY
      [%ORDER_0_FOR_Track].[Name] ASC OFFSET 3 ROWS FETCH NEXT 5 ROWS ONLY FOR JSON PATH,
      INCLUDE_NULL_VALUES
  ) AS [rows]([row_json]) FOR JSON PATH,
  INCLUDE_NULL_VALUES,
  WITHOUT_ARRAY_WRAPPER

[]
