crates/query-engine/tests/snapshots/tests__sorting_by_relationship_count.snap
---
source: crates/query-engine/tests/tests.rs
expression: result
---
SELECT
  [rows].[json] AS [rows]
FROM
  (
    SELECT
      [Artist].[Name] AS [Name]
    FROM
      [public].[Artist] AS [Artist]
      OUTER APPLY (
        SELECT
          COUNT(*) AS [count]
        FROM
          [Album] AS [Album]
        WHERE
          (
            (1 = 1)
            AND ([Artist].[ArtistId] = [Album].[ArtistId])
          ) FOR JSON PATH,
          INCLUDE_NULL_VALUES
      ) AS [%ORDER_0_COUNT_Artist]([json])
    ORDER BY
      [%ORDER_0_COUNT_Artist].[count] DESC OFFSET 0 ROWS FETCH NEXT 5 ROWS ONLY FOR JSON PATH,
      INCLUDE_NULL_VALUES
  ) AS [rows]([json]) FOR JSON PATH,
  INCLUDE_NULL_VALUES,
  WITHOUT_ARRAY_WRAPPER

[]
